--- a/src/partials/components.html
+++ b/src/partials/components.html
@@ -7,7 +7,7 @@
             our process adds up to one exceptional taste sensation.</p>
         <ul class="list comp-list">
             <li class="comp-item comp-bkg-accent">
-                <a class="link comp-lnk-overlay" href="">
+                <!-- <a class="link comp-lnk-overlay" href=""> -->
                     <div class="comp-box-overlay">
                         <picture class="comp-img">
                             <source
@@ -40,11 +40,10 @@
                                 Europe.</p>
                         </div>
                     </div>
-                </a>
-    
+                <!-- </a> -->
             </li>
             <li class="comp-item comp-bkg-white">
-                <a class="link comp-lnk-overlay" href="">
+                <!-- <a class="link comp-lnk-overlay" href=""> -->
                     <div class="comp-box-overlay">
                         <picture class="comp-img">
                             <source
@@ -76,10 +75,10 @@
                                 strengthen the immune system.</p>
                         </div>
                     </div>
-                </a>
+                <!-- </a> -->
             </li>
             <li class="comp-item comp-bkg-dark">
-                <a class="link comp-lnk-overlay" href="">
+                <!-- <a class="link comp-lnk-overlay" href=""> -->
                     <div class="comp-box-overlay">
                         <picture class="comp-img">
                             <source
@@ -111,10 +110,10 @@
                                 great on their own.</p>
                         </div>
                     </div>
-                </a>
+                <!-- </a> -->
             </li>
             <li class="comp-item comp-bkg-white">
-                <a class="link comp-lnk-overlay" href="">
+                <!-- <a class="link comp-lnk-overlay" href=""> -->
                     <div class="comp-box-overlay">
                         <picture class="comp-img">
                             <source
@@ -146,7 +145,7 @@
                                 chocolate is sweeter and more mellow.</p>
                         </div>
                     </div>
-                </a>
+                <!-- </a> -->
             </li>
         </ul>
     </div>
