--- a/src/css/components.css
+++ b/src/css/components.css
@@ -26,7 +26,7 @@
 	padding: 0 16px;
 	border-radius: 35px;
 }
-@media screen and (min-width: 1200px) {
+@media screen and (min-width: 768px) {
 	.comp-container {
         margin-bottom: 100px;
         padding: 0 32px;
@@ -38,6 +38,7 @@
 @media screen and (min-width: 1200px) {
 	.comp-container {
         margin-bottom: 128px;
+        padding: 0 31px 0 32px;
     }
     .comp-list {
 		gap: 19px;
