--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -11,12 +11,12 @@
             </div>
             <div class="hero-scroll">
                 <p class="hero-scroll-text">scroll down</p>
-                <a href="#Footer" class="link">
-                    <button type="button" class="hero-icon">
+                <a href="#Footer" class="link hero-icon">
+                    <!-- <button type="button" class="hero-icon"> -->
                         <svg class="hero-icon-trans" width="16" height="16">
                             <use href="./images/icons.svg#scroll-down"></use>
                         </svg>
-                    </button>
+                    <!-- </button> -->
                 </a>
             </div>
         </div>
